# HILAL

./: App.tsx  CLAUDE.md  README.md  app.json  eas.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  desktop-macos.yml  desktop-windows.yml  eas-update.yml
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
desktop/scripts/: gen-icon.mjs
desktop/src/: App.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
desktop/src/lib/: compute.ts  format.ts  i18n.ts  metrics.ts  theme.ts
desktop/tests/: compute.test.ts
flutter/: README.md  pubspec.yaml
flutter/android/app/: build.gradle.kts
flutter/android/app/src/main/: AndroidManifest.xml
flutter/android/app/src/main/kotlin/ae/hilal/hilal/: MainActivity.kt
flutter/ios/Runner/: Info.plist
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/lib/: main.dart
flutter/lib/src/: battery_logic.dart  device_metrics.dart  format.dart  i18n.dart  notifications.dart  theme.dart  tilt.dart  tilt_service.dart
flutter/test/: battery_test.dart  format_test.dart  tilt_test.dart
src/: PrayerView.tsx  QiblaView.tsx  SettingsView.tsx  TasbihView.tsx  battery.ts  format.ts  i18n.ts  islamic.ts  notifications.ts  theme.ts  tilt.ts  useDeviceMetrics.ts  useLocation.ts  useTilt.ts
tests/: battery.test.ts  format.test.ts  tilt.test.ts
